--- a/mars/flux-system/gotk-components.yaml
+++ b/mars/flux-system/gotk-components.yaml
@@ -1,3 +1,6 @@
+---
+# Flux version: v0.10.0
+# Components: source-controller,kustomize-controller,helm-controller,notification-controller
 apiVersion: v1
 kind: Namespace
 metadata:
@@ -2750,3 +2753,4 @@ spec:
   policyTypes:
   - Ingress
   - Egress
+---
