--- a/mars/database/kustomization.yaml
+++ b/mars/database/kustomization.yaml
@@ -1,8 +1,8 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: kafka
+namespace: database
 resources:
-  - postgres.namespace.yaml
+  - database.namespace.yaml
   - postgres.statefulset.yaml
   - postgres.service.yaml
