--- a/mars/backend/indigo.service.yaml
+++ b/mars/backend/indigo.service.yaml
@@ -1,12 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: user-service
+  name: indigo-service
 spec:
-  type: NodePort
   selector:
-    app: user-service
+    app: indigo-service
   ports:
     - protocol: TCP
       port: 9111
-      nodePort: 31000
