--- a/mars/minecraft/lobby.service.yaml
+++ b/mars/minecraft/lobby.service.yaml
@@ -3,13 +3,9 @@ kind: Service
 metadata:
   name: lobby
 spec:
-  type: NodePort
   selector:
     app: lobby
   ports:
-      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
-    - port: 25565
-      targetPort: 25565
-      # Optional field
-      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
-      nodePort: 32447
+    - protocol: TCP
+      port: 25565
+
