--- a/mars/minecraft/velocity.configmap.yaml
+++ b/mars/minecraft/velocity.configmap.yaml
@@ -11,7 +11,7 @@ data:
     
     # What should be the MOTD? This gets displayed when the player adds your server to
     # their server list. Legacy color codes and JSON are accepted.
-    motd = "&#09add3A Velocity Server"
+    motd = "&#ff97d8Something is mooing in the background..."
     
     # What should we display for the maximum number of players? (Velocity does not support a cap
     # on the number of players online.)
