--- a/mars/storage/kustomization.yaml
+++ b/mars/storage/kustomization.yaml
@@ -1,8 +1,11 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: database
+namespace: storage
 resources:
-  - database.namespace.yaml
+  - storage.namespace.yaml
   - postgres.statefulset.yaml
   - postgres.service.yaml
+  - redis.configmap.yaml
+  - redis.deployment.yaml
+  - redis.service.yaml
