--- a/mars/storage/postgres.statefulset.yaml
+++ b/mars/storage/postgres.statefulset.yaml
@@ -7,7 +7,7 @@ spec:
   selector:
     matchLabels:
       app: postgres
-  serviceName: "postgres"
+  serviceName: postgres
   replicas: 1
   template:
     metadata:
@@ -38,8 +38,8 @@ spec:
     - metadata:
         name: pgdata
       spec:
-        accessModes: ["ReadWriteOnce"]
-        storageClassName: "hcloud-volumes"
+        accessModes: ['ReadWriteOnce']
+        storageClassName: hcloud-volumes
         resources:
           requests:
             storage: 10Gi
