--- a/mars/minecraft/kustomization.yaml
+++ b/mars/minecraft/kustomization.yaml
@@ -10,3 +10,5 @@ resources:
   - velocity.service.yaml
   - lobby.deployment.yaml
   - lobby.service.yaml
+  - pixlers.deployment.yaml
+  - pixlers.service.yaml
